fixed pointer & text align issues

--- a/src/components/AllProducts/AllProducts.scss
+++ b/src/components/AllProducts/AllProducts.scss
@@ -21,12 +21,10 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(210px, max-content));
         .product {
-            // border: solid red 2px;
-            // padding:
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
+
             position: relative;
             width: 210px;
             height: 240px;
